2009-07-21  Oliver Hader  <oliver@typo3.org>

	* Added feature: New hook 'createFile_initializeVariables' to initialize variabled before starting the processing

2009-06-30  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: CLI debug output in processDirtyPages() does not contain directory name
	* Fixed bug: Clearing cached pages (clear_cacheCmd=pages) does not trigger clearing static cache
	* Cleanup: Added methods to determine extension configuration and select specific properties
	* Fixed bug: Processing of dirty pages is shown in info module even if using the dirty flag is not enabled
	* Fixed bug: If necessary, the root of the cache directory should be deleted first

2009-06-23  Daniel Poetzinger  <dev@aoemedia.de>

	* Added feature: Integrate processing instruction for crawler extension

2009-06-23  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Added method to be used on delegating actions to the static cache data manipulation object
	* Cleanup: Fixed ChangeLog and formatting of processing instruction for crawler extension

2009-06-22  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Information whether page is marked dirty is missing in info module
	* Added feature: Integrate possibility to remove all expired pages in the info module
	* Added feature: Moved rendering of rows in info module to own method to be overridable by XCLASSes
	* Cleanup: Refactored clean dirty pages parts
	* Cleanup: Added method to determine the table name used to store cache information
	* Added feature: Integrate possibility to process all dirty pages in the info module

2009-06-12  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Info module does not show pages with a dokType above 199

2009-05-08  Oliver Hader  <oliver@typo3.org>

!!!	* Added feature: Changed database table to use InnoDB engine
	* Follow-up to feature #2598: Added missing 'isdirty' field to SQL definitions
	* Follow-up to feature #2598: Added new CLI task 'processDirtyPages' to process elements marked as dirty