@@ -1,0 +1,9 @@
+Undocumented configuration
+
+
+1) Frontend TypoScript
+
+	Property: tx_ncstaticfilecache.disableCache
+	Data type: boolean
+	Description: By setting this to a true value, the current page and page branch will not be cached statically.
+	Example: tx_ncstaticfilecache.disableCache = 1
