@@ -1,3 +1,7 @@
+2009-08-07  Oliver Hader  <oliver@typo3.org>
+
+	* Added feature: Integrate possibility to disable static caching for a page branch (tx_ncstaticfilecache.disableCache)
+
 2009-07-21  Oliver Hader  <oliver@typo3.org>
 
 	* Added feature: New hook 'createFile_initializeVariables' to initialize variabled before starting the processing
